# restful-countries

./: .flake8  .gitignore  README.md  pyproject.toml
flask_restful_countries/: main.py
flask_restful_countries/model/: countries.py  sqlite_connector.py
flask_restful_countries/resources/: country_codes.csv
flask_restful_countries/views/: countries_views.py
scripts/: country_codes.csv  create_db.py  install_db.py
