[tool.poetry]
name = "flask_restful_countries"
version = "0.1.0"
description = ""
authors = ["Mario Durántez <mdurantezs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "flask_restful_countries.main:main"